--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
     </main>
 
     <footer class="mt-auto text-50">
-      <p>&copy; 2024 hnzo creative solutions.</p>
+      <p>&copy; <span id="currentYear"></span> hnzo creative solutions.</p>
     </footer>
   </div>
   <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/hnzo.js"></script>
 </body>
 </html>
